// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualizationToggleTest render with a specified label 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    arialabel="test-label"
    checked="false"
    classname="my test class"
    componentref="[object Object]"
    disabled="true"
    label="test-label"
    offtext="Off"
    ontext="On"
  />
</DocumentFragment>
`;

exports[`VisualizationToggleTest render with no label 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    arialabel="visualizationName"
    checked="false"
    classname="my test class"
    componentref="[object Object]"
    disabled="true"
    offtext="Off"
    ontext="On"
  />
</DocumentFragment>
`;
